--- a/FX/index.html
+++ b/FX/index.html
@@ -25,146 +25,146 @@
   </thead>
   <tbody>
     <tr>
-      <td>08/09/18</td>
+      <td>10/19/18</td>
       <td>1.00</td>
-      <td>0.86</td>
-      <td>0.78</td>
-      <td>111.07</td>
-      <td>6.84</td>
-      <td>68.62</td>
-      <td>64.77</td>
+      <td>0.87</td>
+      <td>0.76</td>
+      <td>112.51</td>
+      <td>6.94</td>
+      <td>73.61</td>
+      <td>65.63</td>
       <td>1.00</td>
-      <td>1.31</td>
-      <td>18.51</td>
-    </tr>
-    <tr>
-      <td>08/10/18</td>
-      <td>1.00</td>
-      <td>0.86</td>
-      <td>0.78</td>
-      <td>111.14</td>
-      <td>6.82</td>
-      <td>68.65</td>
-      <td>66.00</td>
-      <td>0.99</td>
       <td>1.30</td>
-      <td>18.58</td>
+      <td>18.96</td>
     </tr>
     <tr>
-      <td>08/11/18</td>
+      <td>10/20/18</td>
       <td>1.00</td>
       <td>0.87</td>
-      <td>0.78</td>
-      <td>110.92</td>
-      <td>6.85</td>
-      <td>68.83</td>
-      <td>67.05</td>
-      <td>0.99</td>
-      <td>1.31</td>
-      <td>18.90</td>
+      <td>0.77</td>
+      <td>112.51</td>
+      <td>6.93</td>
+      <td>73.34</td>
+      <td>65.60</td>
+      <td>1.00</td>
+      <td>1.30</td>
+      <td>19.09</td>
     </tr>
     <tr>
-      <td>08/12/18</td>
+      <td>10/22/18</td>
       <td>1.00</td>
       <td>0.87</td>
-      <td>0.78</td>
-      <td>110.92</td>
-      <td>6.85</td>
-      <td>68.83</td>
-      <td>67.05</td>
-      <td>0.99</td>
+      <td>0.77</td>
+      <td>112.78</td>
+      <td>6.94</td>
+      <td>73.56</td>
+      <td>65.29</td>
+      <td>1.00</td>
       <td>1.31</td>
-      <td>18.90</td>
+      <td>19.30</td>
     </tr>
     <tr>
-      <td>08/13/18</td>
+      <td>10/23/18</td>
       <td>1.00</td>
       <td>0.87</td>
-      <td>0.78</td>
-      <td>110.92</td>
-      <td>6.85</td>
-      <td>68.83</td>
-      <td>67.05</td>
-      <td>0.99</td>
+      <td>0.77</td>
+      <td>112.18</td>
+      <td>6.94</td>
+      <td>73.57</td>
+      <td>65.37</td>
+      <td>1.00</td>
       <td>1.31</td>
-      <td>18.90</td>
+      <td>19.38</td>
     </tr>
     <tr>
-      <td>08/14/18</td>
+      <td>10/24/18</td>
+      <td>1.00</td>
+      <td>0.88</td>
+      <td>0.77</td>
+      <td>112.71</td>
+      <td>6.94</td>
+      <td>73.16</td>
+      <td>65.30</td>
+      <td>1.00</td>
+      <td>1.31</td>
+      <td>19.34</td>
+    </tr>
+    <tr>
+      <td>10/25/18</td>
       <td>1.00</td>
       <td>0.88</td>
       <td>0.78</td>
-      <td>110.59</td>
-      <td>6.89</td>
-      <td>70.02</td>
-      <td>67.95</td>
-      <td>0.99</td>
-      <td>1.32</td>
-      <td>19.20</td>
+      <td>112.36</td>
+      <td>6.94</td>
+      <td>73.28</td>
+      <td>65.57</td>
+      <td>1.00</td>
+      <td>1.30</td>
+      <td>19.49</td>
     </tr>
     <tr>
-      <td>08/15/18</td>
+      <td>10/26/18</td>
       <td>1.00</td>
       <td>0.88</td>
       <td>0.78</td>
-      <td>110.84</td>
-      <td>6.88</td>
-      <td>69.90</td>
-      <td>66.50</td>
-      <td>0.99</td>
+      <td>112.06</td>
+      <td>6.95</td>
+      <td>73.46</td>
+      <td>65.85</td>
+      <td>1.00</td>
       <td>1.31</td>
-      <td>18.98</td>
+      <td>19.55</td>
     </tr>
     <tr>
-      <td>08/16/18</td>
+      <td>10/29/18</td>
+      <td>1.00</td>
+      <td>0.88</td>
+      <td>0.78</td>
+      <td>112.40</td>
+      <td>6.96</td>
+      <td>73.42</td>
+      <td>65.58</td>
+      <td>1.00</td>
+      <td>1.31</td>
+      <td>19.65</td>
+    </tr>
+    <tr>
+      <td>10/30/18</td>
+      <td>1.00</td>
+      <td>0.88</td>
+      <td>0.78</td>
+      <td>112.80</td>
+      <td>6.96</td>
+      <td>73.63</td>
+      <td>65.68</td>
+      <td>1.00</td>
+      <td>1.31</td>
+      <td>20.01</td>
+    </tr>
+    <tr>
+      <td>10/31/18</td>
       <td>1.00</td>
       <td>0.88</td>
       <td>0.79</td>
-      <td>111.01</td>
-      <td>6.92</td>
-      <td>69.93</td>
-      <td>67.12</td>
-      <td>1.00</td>
+      <td>113.23</td>
+      <td>6.97</td>
+      <td>73.98</td>
+      <td>65.74</td>
+      <td>1.01</td>
       <td>1.31</td>
-      <td>19.14</td>
-    </tr>
-    <tr>
-      <td>08/17/18</td>
-      <td>1.00</td>
-      <td>0.88</td>
-      <td>0.79</td>
-      <td>110.84</td>
-      <td>6.90</td>
-      <td>70.19</td>
-      <td>67.07</td>
-      <td>0.99</td>
-      <td>1.31</td>
-      <td>19.08</td>
-    </tr>
-    <tr>
-      <td>08/18/18</td>
-      <td>1.00</td>
-      <td>0.88</td>
-      <td>0.79</td>
-      <td>110.39</td>
-      <td>6.88</td>
-      <td>70.16</td>
-      <td>67.44</td>
-      <td>1.00</td>
-      <td>1.31</td>
-      <td>19.12</td>
+      <td>20.24</td>
     </tr>
   </tbody>
 </table>
-          <h2 id="label">Bollinger Bands*</h2>
+          <h2 id="bands-text">Bollinger Bands</h2>
           <table border="0" class="dataframe" id="bands">
   <thead>
     <tr style="text-align: right;">
       <th>Currency</th>
       <th>Close</th>
-      <th>30 Day MA</th>
-      <th>Upper Band</th>
-      <th>Lower Band</th>
+      <th>MA</th>
+      <th>Upper</th>
+      <th>Lower</th>
     </tr>
   </thead>
   <tbody>
@@ -173,63 +173,63 @@
       <td>0.88</td>
       <td>0.87</td>
       <td>0.88</td>
-      <td>0.85</td>
+      <td>0.86</td>
     </tr>
     <tr>
       <td>(GBP)</td>
       <td>0.79</td>
       <td>0.77</td>
       <td>0.79</td>
-      <td>0.76</td>
+      <td>0.75</td>
     </tr>
     <tr>
       <td>(JPY)</td>
-      <td>110.39</td>
-      <td>111.15</td>
-      <td>111.89</td>
-      <td>110.41</td>
+      <td>113.23</td>
+      <td>112.71</td>
+      <td>113.95</td>
+      <td>111.47</td>
     </tr>
     <tr>
       <td>(CNY)</td>
+      <td>6.97</td>
+      <td>6.93</td>
+      <td>6.98</td>
       <td>6.88</td>
-      <td>6.85</td>
-      <td>6.91</td>
-      <td>6.79</td>
     </tr>
     <tr>
       <td>(INR)</td>
-      <td>70.16</td>
-      <td>69.01</td>
-      <td>70.25</td>
-      <td>67.77</td>
+      <td>73.98</td>
+      <td>73.68</td>
+      <td>74.33</td>
+      <td>73.03</td>
     </tr>
     <tr>
       <td>(RUB)</td>
-      <td>67.44</td>
-      <td>64.94</td>
-      <td>68.98</td>
-      <td>60.91</td>
+      <td>65.74</td>
+      <td>65.89</td>
+      <td>66.92</td>
+      <td>64.86</td>
     </tr>
     <tr>
       <td>(CHF)</td>
+      <td>1.01</td>
       <td>1.00</td>
-      <td>0.99</td>
-      <td>1.00</td>
-      <td>0.99</td>
+      <td>1.01</td>
+      <td>0.98</td>
     </tr>
     <tr>
       <td>(CAD)</td>
       <td>1.31</td>
-      <td>1.31</td>
-      <td>1.32</td>
       <td>1.30</td>
+      <td>1.32</td>
+      <td>1.29</td>
     </tr>
     <tr>
       <td>(MXN)</td>
-      <td>19.12</td>
-      <td>18.78</td>
-      <td>19.25</td>
-      <td>18.30</td>
+      <td>20.24</td>
+      <td>19.22</td>
+      <td>20.02</td>
+      <td>18.42</td>
     </tr>
   </tbody>
 </table>
