--- a/FX/template.html
+++ b/FX/template.html
@@ -8,7 +8,7 @@
       <div class="background">
           <h1 class="header">Daily Foreign Exchange Report</h1>
           {dataframe}
-          <h2 id="label">Bollinger Bands*</h2>
+          <h2 id="bands-text">Bollinger Bands</h2>
           {bands}
           <table id="key">
             <thead>
