--- a/NASDAQ/index.html
+++ b/NASDAQ/index.html
@@ -17,54 +17,54 @@
   </thead>
   <tbody>
     <tr>
-      <td>08/03/18</td>
-      <td>7812.01</td>
-      <td>0.12%</td>
+      <td>10/18/18</td>
+      <td>7485.14</td>
+      <td>-2.06%</td>
     </tr>
     <tr>
-      <td>08/06/18</td>
-      <td>7859.68</td>
-      <td>0.61%</td>
+      <td>10/19/18</td>
+      <td>7449.03</td>
+      <td>-0.48%</td>
     </tr>
     <tr>
-      <td>08/07/18</td>
-      <td>7883.66</td>
-      <td>0.31%</td>
+      <td>10/22/18</td>
+      <td>7468.63</td>
+      <td>0.26%</td>
     </tr>
     <tr>
-      <td>08/08/18</td>
-      <td>7888.33</td>
-      <td>0.06%</td>
+      <td>10/23/18</td>
+      <td>7437.54</td>
+      <td>-0.42%</td>
     </tr>
     <tr>
-      <td>08/09/18</td>
-      <td>7891.78</td>
-      <td>0.04%</td>
+      <td>10/24/18</td>
+      <td>7108.40</td>
+      <td>-4.43%</td>
     </tr>
     <tr>
-      <td>08/10/18</td>
-      <td>7839.11</td>
-      <td>-0.67%</td>
+      <td>10/25/18</td>
+      <td>7318.34</td>
+      <td>2.95%</td>
     </tr>
     <tr>
-      <td>08/13/18</td>
-      <td>7819.71</td>
-      <td>-0.25%</td>
+      <td>10/26/18</td>
+      <td>7167.21</td>
+      <td>-2.07%</td>
     </tr>
     <tr>
-      <td>08/14/18</td>
-      <td>7870.89</td>
-      <td>0.65%</td>
+      <td>10/29/18</td>
+      <td>7050.29</td>
+      <td>-1.63%</td>
     </tr>
     <tr>
-      <td>08/15/18</td>
-      <td>7774.12</td>
-      <td>-1.23%</td>
+      <td>10/30/18</td>
+      <td>7161.65</td>
+      <td>1.58%</td>
     </tr>
     <tr>
-      <td>08/16/18</td>
-      <td>7806.52</td>
-      <td>0.42%</td>
+      <td>10/31/18</td>
+      <td>7305.90</td>
+      <td>2.01%</td>
     </tr>
   </tbody>
 </table>
@@ -75,8 +75,8 @@
                         <th width="40%">Volume</th>
                     </tr>
                     <tr>
-                        <td width="60%">6213.13 - 7932.24</td>
-                        <td width="40%">1,949,052,383</td>
+                        <td width="60%">6706.21 - 8109.69</td>
+                        <td width="40%">2,835,562,259</td>
                         
                     </tr>
             </table>
@@ -86,8 +86,8 @@
                         <th>Highs/Lows</th>
                     </tr>
                     <tr>
-                        <td>2.395</td>
-                        <td>1.280</td>
+                        <td>1.593</td>
+                        <td>0.319</td>
                     </tr>
             </table>
             <!--<h1 class="bands">Bollinger Bands</h1>-->
@@ -104,59 +104,59 @@
                         </tr>
                         <tr>
                             <th>Close</th>
-                            <td>179.53</td>
-                            <td>1882.62</td>
-                            <td>210.24</td>
-                            <td>326.4</td>
-                            <td>1214.38</td>
+                            <td>151.79</td>
+                            <td>1598.01</td>
+                            <td>218.86</td>
+                            <td>301.78</td>
+                            <td>1076.77</td>
                         </tr>
                         <tr>
                             <th>Volume</th>
-                            <td>33,020,231</td>
-                            <td>7,700,682</td>
-                            <td>28,807,564</td>
-                            <td>11,784,485</td>
-                            <td>1,828,814</td>
+                            <td>60,101,251</td>
+                            <td>9,390,211</td>
+                            <td>38,358,933</td>
+                            <td>20,360,342</td>
+                            <td>2,529,768</td>
                         </tr>
                         <tr>
                             <th>7D</th>
-                            <td>-0.40%</td>
-                            <td>-0.20%</td>
-                            <td>1.31%</td>
-                            <td>-5.63%</td>
-                            <td>-1.88%</td>
+                            <td>0.56%</td>
+                            <td>-10.33%</td>
+                            <td>-0.43%</td>
+                            <td>-3.54%</td>
+                            <td>-1.72%</td>
                         </tr>
                         <tr>
                             <th>30D</th>
-                            <td>-14.25%</td>
-                            <td>2.15%</td>
-                            <td>10.81%</td>
-                            <td>-12.99%</td>
-                            <td>1.55%</td>
+                            <td>-4.73%</td>
+                            <td>-18.94%</td>
+                            <td>-4.54%</td>
+                            <td>-19.98%</td>
+                            <td>-10.28%</td>
                         </tr>
                         <tr>
                             <th>90D</th>
-                            <td>-1.72%</td>
-                            <td>19.58%</td>
-                            <td>13.24%</td>
-                            <td>0.68%</td>
-                            <td>13.88%</td>
+                            <td>-14.62%</td>
+                            <td>-12.36%</td>
+                            <td>5.60%</td>
+                            <td>-12.04%</td>
+                            <td>-12.01%</td>
                         </tr>
                         <tr>
                             <th>YTD</th>
-                            <td>-1.04%</td>
-                            <td>58.34%</td>
-                            <td>23.45%</td>
-                            <td>62.33%</td>
-                            <td>14.03%</td>
+                            <td>-16.33%</td>
+                            <td>34.40%</td>
+                            <td>28.51%</td>
+                            <td>50.09%</td>
+                            <td>1.11%</td>
                         </tr>
                         <tr>
                             <th>1Y</th>
-                            <td>7.56%</td>
-                            <td>95.99%</td>
-                            <td>35.20%</td>
-                            <td>96.52%</td>
-                            <td>33.30%</td>
+                            <td>-16.90%</td>
+                            <td>44.79%</td>
+                            <td>33.12%</td>
+                            <td>52.41%</td>
+                            <td>5.00%</td>
                         </tr>
                     </tbody>
                 </table>
@@ -165,23 +165,23 @@
                 <tbody>
                     <tr>
                         <th>7 Day</th>
-                        <td>-0.42%</td>
+                        <td>-0.17%</td>
                     </tr>
                     <tr>
                         <th>30 Day</th>
-                        <td>-0.61%</td>
+                        <td>-8.67%</td>
                     </tr>
                     <tr>
                         <th>90 Day</th>
-                        <td>-0.61%</td>
+                        <td>-8.67%</td>
                     </tr>
                     <tr>
                         <th>YTD Day</th>
-                        <td>11.41%</td>
+                        <td>4.27%</td>
                     </tr>
                     <tr>
                         <th>1 Year</th>
-                        <td>25.47%</td>
+                        <td>8.77%</td>
                     </tr>
                 </tbody>
             </table>
@@ -197,64 +197,64 @@
   </thead>
   <tbody>
     <tr>
-      <td>Symantec</td>
-      <td>19.41</td>
-      <td>+0.86</td>
-      <td>+4.64%</td>
+      <td>T-Mobile US</td>
+      <td>63.92</td>
+      <td>+4.63</td>
+      <td>+7.24%</td>
     </tr>
     <tr>
-      <td>Cisco</td>
-      <td>45.16</td>
-      <td>+1.30</td>
-      <td>+2.96%</td>
+      <td>Ctripcom</td>
+      <td>31.18</td>
+      <td>+2.10</td>
+      <td>+6.74%</td>
     </tr>
     <tr>
-      <td>Regeneron Pharmaceut</td>
-      <td>371.78</td>
-      <td>+9.91</td>
-      <td>+2.74%</td>
+      <td>Incyte</td>
+      <td>61.03</td>
+      <td>+3.79</td>
+      <td>+6.21%</td>
     </tr>
     <tr>
-      <td>Cerner</td>
-      <td>64.86</td>
-      <td>+1.35</td>
-      <td>+2.13%</td>
+      <td>Intuitive Surgical</td>
+      <td>490.82</td>
+      <td>+30.36</td>
+      <td>+6.19%</td>
     </tr>
     <tr>
-      <td>Charte a</td>
-      <td>302.00</td>
-      <td>+6.25</td>
-      <td>+2.11%</td>
+      <td>eBay</td>
+      <td>27.42</td>
+      <td>+1.61</td>
+      <td>+5.87%</td>
     </tr>
     <tr>
-      <td>Autodesk</td>
-      <td>133.73</td>
-      <td>+2.68</td>
-      <td>+2.05%</td>
+      <td>Netflix</td>
+      <td>285.81</td>
+      <td>+15.97</td>
+      <td>+5.59%</td>
     </tr>
     <tr>
-      <td>Comcast</td>
-      <td>35.66</td>
-      <td>+0.69</td>
-      <td>+1.97%</td>
+      <td>JDcom</td>
+      <td>22.38</td>
+      <td>+1.14</td>
+      <td>+5.09%</td>
     </tr>
     <tr>
-      <td>American Airlines</td>
-      <td>38.16</td>
-      <td>+0.72</td>
-      <td>+1.92%</td>
+      <td>Automatic Data Proce</td>
+      <td>137.26</td>
+      <td>+6.82</td>
+      <td>+4.97%</td>
     </tr>
     <tr>
-      <td>Shire</td>
-      <td>171.50</td>
-      <td>+3.17</td>
-      <td>+1.88%</td>
+      <td>Liberty Global</td>
+      <td>23.86</td>
+      <td>+1.18</td>
+      <td>+4.95%</td>
     </tr>
     <tr>
-      <td>Baiducom</td>
-      <td>217.30</td>
-      <td>+3.83</td>
-      <td>+1.79%</td>
+      <td>Micron Technology</td>
+      <td>36.01</td>
+      <td>+1.71</td>
+      <td>+4.75%</td>
     </tr>
   </tbody>
 </table>
@@ -269,64 +269,64 @@
   </thead>
   <tbody>
     <tr>
-      <td>JDcom</td>
-      <td>31.97</td>
-      <td>-0.39</td>
-      <td>-1.21%</td>
+      <td>Intel</td>
+      <td>47.76</td>
+      <td>-0.88</td>
+      <td>-1.84%</td>
     </tr>
     <tr>
-      <td>Liberty Interactive</td>
-      <td>21.96</td>
-      <td>-0.22</td>
-      <td>-0.99%</td>
+      <td>The Kraft Heinz Comp</td>
+      <td>55.85</td>
+      <td>-0.88</td>
+      <td>-1.58%</td>
     </tr>
     <tr>
-      <td>Tesla</td>
-      <td>335.45</td>
-      <td>-3.24</td>
-      <td>-0.96%</td>
+      <td>Vertex Pharmaceutica</td>
+      <td>171.49</td>
+      <td>-2.03</td>
+      <td>-1.18%</td>
     </tr>
     <tr>
-      <td>Micron Technology</td>
-      <td>47.10</td>
-      <td>-0.39</td>
-      <td>-0.82%</td>
+      <td>DENTSPLY SIRONA</td>
+      <td>34.99</td>
+      <td>-0.36</td>
+      <td>-1.03%</td>
     </tr>
     <tr>
-      <td>Microchip Technology</td>
-      <td>81.79</td>
-      <td>-0.55</td>
-      <td>-0.67%</td>
+      <td>Celgene</td>
+      <td>72.34</td>
+      <td>-0.74</td>
+      <td>-1.02%</td>
     </tr>
     <tr>
-      <td>Alphabet A (ex Googl</td>
-      <td>1,224.06</td>
-      <td>-8.16</td>
+      <td>Align Technology</td>
+      <td>223.01</td>
+      <td>-1.81</td>
+      <td>-0.81%</td>
+    </tr>
+    <tr>
+      <td>Ross Stores</td>
+      <td>99.78</td>
+      <td>-0.78</td>
+      <td>-0.78%</td>
+    </tr>
+    <tr>
+      <td>Biogen</td>
+      <td>306.28</td>
+      <td>-2.01</td>
       <td>-0.66%</td>
     </tr>
     <tr>
-      <td>Hologic</td>
-      <td>38.16</td>
-      <td>-0.25</td>
-      <td>-0.65%</td>
+      <td>Liberty Interactive</td>
+      <td>22.07</td>
+      <td>-0.13</td>
+      <td>-0.59%</td>
     </tr>
     <tr>
-      <td>Adobe</td>
-      <td>248.89</td>
-      <td>-1.63</td>
-      <td>-0.65%</td>
-    </tr>
-    <tr>
-      <td>Alphabet C (ex Googl</td>
-      <td>1,206.49</td>
-      <td>-7.89</td>
-      <td>-0.65%</td>
-    </tr>
-    <tr>
-      <td>NVIDIA</td>
-      <td>257.44</td>
-      <td>-1.64</td>
-      <td>-0.63%</td>
+      <td>Starbucks</td>
+      <td>58.59</td>
+      <td>-0.32</td>
+      <td>-0.55%</td>
     </tr>
   </tbody>
 </table>  
