--- a/SP500/index.html
+++ b/SP500/index.html
@@ -12,59 +12,59 @@
     <tr style="text-align: right;">
       <th>Date</th>
       <th>SP500</th>
-      <th>% Change</th>
+      <th>% Chg</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>08/02/18</td>
-      <td>2,827.22</td>
-      <td>0.49%</td>
+      <td>10/18/18</td>
+      <td>2,768.78</td>
+      <td>-1.44%</td>
     </tr>
     <tr>
-      <td>08/03/18</td>
-      <td>2,840.35</td>
-      <td>0.46%</td>
+      <td>10/19/18</td>
+      <td>2,767.78</td>
+      <td>-0.04%</td>
     </tr>
     <tr>
-      <td>08/06/18</td>
-      <td>2,850.40</td>
-      <td>0.35%</td>
+      <td>10/22/18</td>
+      <td>2,755.88</td>
+      <td>-0.43%</td>
     </tr>
     <tr>
-      <td>08/07/18</td>
-      <td>2,858.45</td>
-      <td>0.28%</td>
+      <td>10/23/18</td>
+      <td>2,740.69</td>
+      <td>-0.55%</td>
     </tr>
     <tr>
-      <td>08/08/18</td>
-      <td>2,857.70</td>
-      <td>-0.03%</td>
+      <td>10/24/18</td>
+      <td>2,656.10</td>
+      <td>-3.09%</td>
     </tr>
     <tr>
-      <td>08/09/18</td>
-      <td>2,853.58</td>
-      <td>-0.14%</td>
+      <td>10/25/18</td>
+      <td>2,705.57</td>
+      <td>1.86%</td>
     </tr>
     <tr>
-      <td>08/10/18</td>
-      <td>2,833.28</td>
-      <td>-0.71%</td>
+      <td>10/26/18</td>
+      <td>2,658.69</td>
+      <td>-1.73%</td>
     </tr>
     <tr>
-      <td>08/13/18</td>
-      <td>2,821.93</td>
-      <td>-0.40%</td>
+      <td>10/29/18</td>
+      <td>2,641.25</td>
+      <td>-0.66%</td>
     </tr>
     <tr>
-      <td>08/14/18</td>
-      <td>2,839.96</td>
-      <td>0.64%</td>
+      <td>10/30/18</td>
+      <td>2,682.63</td>
+      <td>1.57%</td>
     </tr>
     <tr>
-      <td>08/15/18</td>
-      <td>2,818.37</td>
-      <td>-0.76%</td>
+      <td>10/31/18</td>
+      <td>2,711.74</td>
+      <td>1.09%</td>
     </tr>
   </tbody>
 </table>
@@ -81,11 +81,11 @@
   </thead>
   <tbody>
     <tr>
-      <td>2,818.37</td>
-      <td>2,828.48</td>
-      <td>18.71</td>
-      <td>2,865.89</td>
-      <td>2,791.06</td>
+      <td>2,711.74</td>
+      <td>2,764.61</td>
+      <td>79.15</td>
+      <td>2,922.91</td>
+      <td>2,606.30</td>
     </tr>
   </tbody>
 </table>
@@ -101,74 +101,74 @@
   </thead>
   <tbody>
     <tr>
-      <td>AMD</td>
-      <td>Advanced Micro Device</td>
-      <td>19.33</td>
-      <td>-0.37</td>
-      <td>-1.88%</td>
-    </tr>
-    <tr>
-      <td>GE</td>
-      <td>General Electric</td>
-      <td>12.30</td>
-      <td>+0.08</td>
-      <td>+0.65%</td>
-    </tr>
-    <tr>
-      <td>CSCO</td>
-      <td>Cisco Systems</td>
-      <td>45.16</td>
-      <td>+1.30</td>
-      <td>+2.96%</td>
-    </tr>
-    <tr>
-      <td>BAC</td>
-      <td>Bank of America</td>
-      <td>30.72</td>
-      <td>+0.36</td>
-      <td>+1.19%</td>
-    </tr>
-    <tr>
-      <td>WMT</td>
-      <td>Walmart</td>
-      <td>98.64</td>
-      <td>+8.42</td>
-      <td>+9.33%</td>
-    </tr>
-    <tr>
       <td>T</td>
       <td>AT&amp;T</td>
-      <td>33.09</td>
-      <td>+0.62</td>
-      <td>+1.91%</td>
+      <td>30.68</td>
+      <td>+0.21</td>
+      <td>+0.69%</td>
     </tr>
     <tr>
-      <td>MU</td>
-      <td>Micron Technology</td>
-      <td>47.10</td>
-      <td>-0.39</td>
-      <td>-0.82%</td>
+      <td>CMCSA</td>
+      <td>Comcast</td>
+      <td>38.14</td>
+      <td>+0.43</td>
+      <td>+1.14%</td>
+    </tr>
+    <tr>
+      <td>VZ</td>
+      <td>Verizon Communications</td>
+      <td>57.09</td>
+      <td>-1.09</td>
+      <td>-1.87%</td>
+    </tr>
+    <tr>
+      <td>WFC</td>
+      <td>Wells Fargo &amp;</td>
+      <td>53.23</td>
+      <td>+0.54</td>
+      <td>+1.02%</td>
+    </tr>
+    <tr>
+      <td>FCX</td>
+      <td>Freeport-McMoRan</td>
+      <td>11.65</td>
+      <td>+0.24</td>
+      <td>+2.10%</td>
+    </tr>
+    <tr>
+      <td>RF</td>
+      <td>Regions Financial</td>
+      <td>16.97</td>
+      <td>+0.45</td>
+      <td>+2.72%</td>
     </tr>
     <tr>
       <td>SYMC</td>
       <td>Symantec</td>
-      <td>19.41</td>
-      <td>+0.86</td>
-      <td>+4.64%</td>
+      <td>18.15</td>
+      <td>+0.47</td>
+      <td>+2.66%</td>
     </tr>
     <tr>
-      <td>FB</td>
-      <td>Facebook</td>
-      <td>174.70</td>
-      <td>-4.83</td>
-      <td>-2.69%</td>
+      <td>ORCL</td>
+      <td>Oracle</td>
+      <td>48.84</td>
+      <td>+0.27</td>
+      <td>+0.56%</td>
     </tr>
     <tr>
-      <td>F</td>
-      <td>Ford Motor</td>
-      <td>9.51</td>
-      <td>+0.06</td>
-      <td>+0.63%</td>
+      <td>KMI</td>
+      <td>Kinder Morgan</td>
+      <td>17.02</td>
+      <td>+0.26</td>
+      <td>+1.55%</td>
+    </tr>
+    <tr>
+      <td>EA</td>
+      <td>Electronic Arts</td>
+      <td>90.98</td>
+      <td>-3.85</td>
+      <td>-4.06%</td>
     </tr>
   </tbody>
 </table>
@@ -184,74 +184,74 @@
   </thead>
   <tbody>
     <tr>
-      <td>WMT</td>
-      <td>Walmart</td>
-      <td>98.64</td>
-      <td>+8.42</td>
-      <td>+9.33%</td>
+      <td>TAP</td>
+      <td>Molson ors Brewing</td>
+      <td>64.00</td>
+      <td>+5.79</td>
+      <td>+9.95%</td>
     </tr>
     <tr>
-      <td>SYMC</td>
-      <td>Symantec</td>
-      <td>19.41</td>
-      <td>+0.86</td>
-      <td>+4.64%</td>
+      <td>FLT</td>
+      <td>Fleetcor Technologies</td>
+      <td>200.03</td>
+      <td>+14.78</td>
+      <td>+7.98%</td>
     </tr>
     <tr>
-      <td>BA</td>
-      <td>Boeing</td>
-      <td>345.98</td>
-      <td>+14.22</td>
-      <td>+4.29%</td>
+      <td>HFC</td>
+      <td>HollyFrontier</td>
+      <td>67.44</td>
+      <td>+4.18</td>
+      <td>+6.61%</td>
     </tr>
     <tr>
-      <td>CTL</td>
-      <td>CenturyLink</td>
-      <td>23.33</td>
-      <td>+0.86</td>
-      <td>+3.83%</td>
+      <td>VAR</td>
+      <td>Varian Medical Systems</td>
+      <td>119.37</td>
+      <td>+7.16</td>
+      <td>+6.38%</td>
     </tr>
     <tr>
-      <td>NRG</td>
-      <td>NRG Energy</td>
-      <td>33.79</td>
-      <td>+1.18</td>
-      <td>+3.62%</td>
+      <td>INCY</td>
+      <td>Incyte</td>
+      <td>64.82</td>
+      <td>+3.79</td>
+      <td>+6.21%</td>
     </tr>
     <tr>
-      <td>CAT</td>
-      <td>Caterpillar</td>
-      <td>136.26</td>
-      <td>+4.24</td>
-      <td>+3.21%</td>
+      <td>ISRG</td>
+      <td>Intuitive Surgical</td>
+      <td>521.18</td>
+      <td>+30.36</td>
+      <td>+6.19%</td>
     </tr>
     <tr>
-      <td>PCG</td>
-      <td>PG&amp;E</td>
-      <td>44.79</td>
-      <td>+1.32</td>
-      <td>+3.04%</td>
+      <td>MGM</td>
+      <td>MGM Resorts Internationa</td>
+      <td>26.68</td>
+      <td>+1.49</td>
+      <td>+5.92%</td>
     </tr>
     <tr>
-      <td>CSCO</td>
-      <td>Cisco Systems</td>
-      <td>45.16</td>
-      <td>+1.30</td>
-      <td>+2.96%</td>
+      <td>AMD</td>
+      <td>Advanced Micro Devices</td>
+      <td>18.21</td>
+      <td>+1.01</td>
+      <td>+5.87%</td>
     </tr>
     <tr>
-      <td>FL</td>
-      <td>Foot Locker</td>
-      <td>49.75</td>
-      <td>+1.40</td>
-      <td>+2.90%</td>
+      <td>EBAY</td>
+      <td>eBay</td>
+      <td>29.03</td>
+      <td>+1.61</td>
+      <td>+5.87%</td>
     </tr>
     <tr>
-      <td>AES</td>
-      <td>AES</td>
-      <td>13.87</td>
-      <td>+0.38</td>
-      <td>+2.82%</td>
+      <td>NFLX</td>
+      <td>Netflix</td>
+      <td>301.78</td>
+      <td>+15.97</td>
+      <td>+5.59%</td>
     </tr>
   </tbody>
 </table>
@@ -267,74 +267,74 @@
   </thead>
   <tbody>
     <tr>
-      <td>CMG</td>
-      <td>Chipotle Mexican Gril</td>
-      <td>502.70</td>
-      <td>-23.19</td>
-      <td>-4.41%</td>
+      <td>BAX</td>
+      <td>Baxter International</td>
+      <td>62.51</td>
+      <td>-6.15</td>
+      <td>-8.96%</td>
     </tr>
     <tr>
-      <td>NTAP</td>
-      <td>NetApp</td>
-      <td>79.51</td>
-      <td>-2.96</td>
-      <td>-3.59%</td>
+      <td>K</td>
+      <td>Kellogg</td>
+      <td>65.48</td>
+      <td>-6.38</td>
+      <td>-8.88%</td>
     </tr>
     <tr>
-      <td>STZ</td>
-      <td>Constellation Brands</td>
-      <td>202.48</td>
-      <td>-5.79</td>
-      <td>-2.78%</td>
+      <td>IPGP</td>
+      <td>IPG Photonics</td>
+      <td>133.55</td>
+      <td>-8.25</td>
+      <td>-5.82%</td>
     </tr>
     <tr>
-      <td>FB</td>
-      <td>Facebook</td>
-      <td>174.70</td>
-      <td>-4.83</td>
-      <td>-2.69%</td>
+      <td>APC</td>
+      <td>Anadarko Petroleum</td>
+      <td>53.20</td>
+      <td>-3.25</td>
+      <td>-5.76%</td>
     </tr>
     <tr>
-      <td>VIAB</td>
-      <td>Viacom</td>
-      <td>30.10</td>
-      <td>-0.70</td>
-      <td>-2.27%</td>
+      <td>UA</td>
+      <td>Under Armour</td>
+      <td>19.83</td>
+      <td>-1.14</td>
+      <td>-5.44%</td>
     </tr>
     <tr>
-      <td>PWR</td>
-      <td>Quanta Services</td>
-      <td>33.18</td>
-      <td>-0.76</td>
-      <td>-2.24%</td>
+      <td>GILD</td>
+      <td>Gilead Sciences</td>
+      <td>68.18</td>
+      <td>-3.86</td>
+      <td>-5.36%</td>
     </tr>
     <tr>
-      <td>BKNG</td>
-      <td>Booking Holdings</td>
-      <td>1,824.99</td>
-      <td>-38.50</td>
-      <td>-2.07%</td>
+      <td>WELL</td>
+      <td>Welltower</td>
+      <td>66.07</td>
+      <td>-3.42</td>
+      <td>-4.92%</td>
     </tr>
     <tr>
-      <td>AMD</td>
-      <td>Advanced Micro Device</td>
-      <td>19.33</td>
-      <td>-0.37</td>
-      <td>-1.88%</td>
+      <td>UAA</td>
+      <td>Under Armour</td>
+      <td>22.11</td>
+      <td>-1.12</td>
+      <td>-4.82%</td>
     </tr>
     <tr>
-      <td>BSX</td>
-      <td>Boston Scientific</td>
-      <td>34.29</td>
-      <td>-0.60</td>
-      <td>-1.72%</td>
+      <td>ABBV</td>
+      <td>AbbVie</td>
+      <td>77.85</td>
+      <td>-3.74</td>
+      <td>-4.58%</td>
     </tr>
     <tr>
-      <td>SEE</td>
-      <td>Sealed Air</td>
-      <td>39.05</td>
-      <td>-0.67</td>
-      <td>-1.69%</td>
+      <td>GPS</td>
+      <td>Gap</td>
+      <td>27.30</td>
+      <td>-1.18</td>
+      <td>-4.14%</td>
     </tr>
   </tbody>
 </table>
@@ -351,12 +351,12 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>2,417 - 2,873</td>
-                        <td>1,990,092,035</td>
-                        <td>2,045,129,278</td>
-                        <td>24.61</td>
-                        <td>2.26</td>
-                        <td>3.41</td>
+                        <td>2,533 - 2,941</td>
+                        <td>3,254,302,000</td>
+                        <td>2,118,901,571</td>
+                        <td>22.13</td>
+                        <td>2.10</td>
+                        <td>3.25</td>
                     </tr>
                 </tbody>
             </table>
@@ -373,11 +373,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>-0.53%</td>
-                        <td>0.10%</td>
-                        <td>3.89%</td>
-                        <td>4.55%</td>
-                        <td>15.98%</td>
+                        <td>0.23%</td>
+                        <td>-7.24%</td>
+                        <td>-4.53%</td>
+                        <td>0.59%</td>
+                        <td>5.13%</td>
                     </tr>
                 </tbody>
             </table>
