--- a/Bond Yields/index.html
+++ b/Bond Yields/index.html
@@ -2,16 +2,17 @@
 <html>
     <head>
       <title>Daily Treasury Yield Report</title>
-      <link rel="stylesheet" href="/home/daily_reports/Bond Yields/style.css" type="text/css">
+      <link rel="stylesheet" href="/home/daily_reports/Bond Yields/Yields.css" type="text/css">
     </head>
     <body>
       <div class="background">
           <h1 class="header">Daily Treasury Yield Report</h1>
-          <table border="0" class="dataframe">
+          <table border="0" class="dataframe" id="yields">
   <thead>
     <tr style="text-align: right;">
       <th>Date</th>
       <th>1M</th>
+      <th>2M</th>
       <th>3M</th>
       <th>6M</th>
       <th>1Y</th>
@@ -26,144 +27,154 @@
   </thead>
   <tbody>
     <tr>
-      <td>08/03/18</td>
-      <td>1.90</td>
-      <td>2.01</td>
+      <td>10/18/18</td>
+      <td>2.19</td>
       <td>2.23</td>
-      <td>2.43</td>
-      <td>2.63</td>
-      <td>2.74</td>
-      <td>2.82</td>
-      <td>2.91</td>
+      <td>2.32</td>
+      <td>2.47</td>
+      <td>2.67</td>
+      <td>2.87</td>
       <td>2.95</td>
       <td>3.03</td>
-      <td>3.09</td>
+      <td>3.11</td>
+      <td>3.17</td>
+      <td>3.28</td>
+      <td>3.36</td>
     </tr>
     <tr>
-      <td>08/06/18</td>
-      <td>1.92</td>
-      <td>2.05</td>
+      <td>10/19/18</td>
+      <td>2.19</td>
       <td>2.23</td>
-      <td>2.44</td>
+      <td>2.31</td>
+      <td>2.48</td>
+      <td>2.67</td>
+      <td>2.92</td>
+      <td>2.99</td>
+      <td>3.05</td>
+      <td>3.14</td>
+      <td>3.20</td>
+      <td>3.31</td>
+      <td>3.38</td>
+    </tr>
+    <tr>
+      <td>10/22/18</td>
+      <td>2.18</td>
+      <td>2.25</td>
+      <td>2.34</td>
+      <td>2.49</td>
+      <td>2.68</td>
+      <td>2.92</td>
+      <td>2.99</td>
+      <td>3.05</td>
+      <td>3.13</td>
+      <td>3.20</td>
+      <td>3.31</td>
+      <td>3.38</td>
+    </tr>
+    <tr>
+      <td>10/23/18</td>
+      <td>2.21</td>
+      <td>2.23</td>
+      <td>2.33</td>
+      <td>2.48</td>
+      <td>2.67</td>
+      <td>2.89</td>
+      <td>2.95</td>
+      <td>3.01</td>
+      <td>3.10</td>
+      <td>3.17</td>
+      <td>3.29</td>
+      <td>3.37</td>
+    </tr>
+    <tr>
+      <td>10/24/18</td>
+      <td>2.20</td>
+      <td>2.23</td>
+      <td>2.34</td>
+      <td>2.47</td>
       <td>2.64</td>
-      <td>2.73</td>
-      <td>2.80</td>
+      <td>2.84</td>
       <td>2.89</td>
       <td>2.94</td>
       <td>3.02</td>
-      <td>3.08</td>
+      <td>3.10</td>
+      <td>3.24</td>
+      <td>3.33</td>
     </tr>
     <tr>
-      <td>08/07/18</td>
-      <td>1.96</td>
-      <td>2.06</td>
-      <td>2.23</td>
-      <td>2.45</td>
-      <td>2.68</td>
-      <td>2.76</td>
-      <td>2.84</td>
-      <td>2.92</td>
-      <td>2.98</td>
-      <td>3.06</td>
-      <td>3.12</td>
-    </tr>
-    <tr>
-      <td>08/08/18</td>
-      <td>1.93</td>
-      <td>2.06</td>
+      <td>10/25/18</td>
+      <td>2.19</td>
       <td>2.24</td>
-      <td>2.44</td>
-      <td>2.68</td>
-      <td>2.77</td>
-      <td>2.83</td>
+      <td>2.34</td>
+      <td>2.47</td>
+      <td>2.66</td>
+      <td>2.86</td>
       <td>2.92</td>
-      <td>2.96</td>
-      <td>3.05</td>
-      <td>3.12</td>
-    </tr>
-    <tr>
-      <td>08/09/18</td>
-      <td>1.91</td>
-      <td>2.06</td>
-      <td>2.25</td>
-      <td>2.44</td>
-      <td>2.64</td>
-      <td>2.74</td>
-      <td>2.80</td>
-      <td>2.89</td>
-      <td>2.93</td>
-      <td>3.01</td>
-      <td>3.08</td>
-    </tr>
-    <tr>
-      <td>08/10/18</td>
-      <td>1.92</td>
-      <td>2.05</td>
-      <td>2.23</td>
-      <td>2.42</td>
-      <td>2.61</td>
-      <td>2.68</td>
-      <td>2.75</td>
-      <td>2.82</td>
-      <td>2.87</td>
-      <td>2.96</td>
-      <td>3.03</td>
-    </tr>
-    <tr>
-      <td>08/13/18</td>
-      <td>1.93</td>
-      <td>2.06</td>
-      <td>2.22</td>
-      <td>2.42</td>
-      <td>2.61</td>
-      <td>2.68</td>
-      <td>2.75</td>
-      <td>2.82</td>
-      <td>2.88</td>
-      <td>2.97</td>
-      <td>3.05</td>
-    </tr>
-    <tr>
-      <td>08/14/18</td>
-      <td>1.96</td>
-      <td>2.08</td>
-      <td>2.25</td>
-      <td>2.44</td>
-      <td>2.63</td>
-      <td>2.71</td>
-      <td>2.77</td>
-      <td>2.84</td>
-      <td>2.89</td>
       <td>2.98</td>
-      <td>3.06</td>
+      <td>3.07</td>
+      <td>3.14</td>
+      <td>3.27</td>
+      <td>3.35</td>
     </tr>
     <tr>
-      <td>08/15/18</td>
-      <td>1.96</td>
-      <td>2.07</td>
-      <td>2.23</td>
-      <td>2.45</td>
-      <td>2.61</td>
-      <td>2.68</td>
-      <td>2.73</td>
+      <td>10/26/18</td>
+      <td>2.16</td>
+      <td>2.21</td>
+      <td>2.33</td>
+      <td>2.47</td>
+      <td>2.63</td>
+      <td>2.81</td>
+      <td>2.85</td>
+      <td>2.91</td>
+      <td>3.00</td>
+      <td>3.08</td>
+      <td>3.23</td>
+      <td>3.32</td>
+    </tr>
+    <tr>
+      <td>10/29/18</td>
+      <td>2.17</td>
+      <td>2.21</td>
+      <td>2.34</td>
+      <td>2.49</td>
+      <td>2.64</td>
       <td>2.81</td>
       <td>2.86</td>
-      <td>2.95</td>
-      <td>3.03</td>
+      <td>2.91</td>
+      <td>3.00</td>
+      <td>3.08</td>
+      <td>3.23</td>
+      <td>3.33</td>
     </tr>
     <tr>
-      <td>08/16/18</td>
-      <td>1.96</td>
-      <td>2.07</td>
-      <td>2.24</td>
-      <td>2.45</td>
-      <td>2.63</td>
-      <td>2.70</td>
-      <td>2.75</td>
-      <td>2.82</td>
-      <td>2.87</td>
-      <td>2.95</td>
+      <td>10/30/18</td>
+      <td>2.21</td>
+      <td>2.26</td>
+      <td>2.33</td>
+      <td>2.48</td>
+      <td>2.66</td>
+      <td>2.84</td>
+      <td>2.90</td>
+      <td>2.94</td>
       <td>3.03</td>
+      <td>3.12</td>
+      <td>3.26</td>
+      <td>3.36</td>
+    </tr>
+    <tr>
+      <td>10/31/18</td>
+      <td>2.20</td>
+      <td>2.26</td>
+      <td>2.34</td>
+      <td>2.49</td>
+      <td>2.69</td>
+      <td>2.87</td>
+      <td>2.93</td>
+      <td>2.98</td>
+      <td>3.07</td>
+      <td>3.15</td>
+      <td>3.30</td>
+      <td>3.39</td>
     </tr>
   </tbody>
 </table>
@@ -181,21 +192,21 @@
               </tr>
             </thead>
               <tr>
-                <td>2.9</td>
-                <td>2.91</td>
-                <td>2.75</td>
-                <td>2.91</td>
+                <td>3.03</td>
+                <td>2.97</td>
+                <td>2.92</td>
+                <td>3.07</td>
+                <td>3.00</td>
                 <td>2.88</td>
-                <td>2.76</td>
-                <td>2.08</td>
-                <td>0.24</td>
+                <td>2.05</td>
+                <td>0.28</td>
               </tr>
             </thead>
           </table>
-          <img id="YearAgo" src="/home/daily_reports/Bond Yields/YearAgo.jpg">
-          <img id="MovingAverages" src="/home/daily_reports/Bond Yields/MovingAverages.jpg">
-          <img id="Breakeven" src="/home/daily_reports/Bond Yields/Breakeven Rate.jpg">
-          <img id="YieldSpreads" src="/home/daily_reports/Bond Yields/YieldSpreads.jpg">
+          <img id="YearAgo" src="/home/daily_reports/Bond Yields/YearAgo.png">
+          <img id="MovingAverages" src="/home/daily_reports/Bond Yields/MovingAverages.png">
+          <img id="Breakeven" src="/home/daily_reports/Bond Yields/Breakeven Rate.png">
+          <img id="YieldSpreads" src="/home/daily_reports/Bond Yields/YieldSpreads.png">
       </div>
     </body>
         
